fix: notice, vertical spacing

--- a/theme/css/modules/base/base.css
+++ b/theme/css/modules/base/base.css
@@ -6,7 +6,7 @@ body {
 }
 
 p + p {
-    margin-top: 1em;
+    margin-top: 0.7em;
 }
 
 a {
