--- a/theme/css/modules/design/alignment/vertical.css
+++ b/theme/css/modules/design/alignment/vertical.css
@@ -3,13 +3,13 @@
 }
 
 .vertical_small {
-    height: 0.5rem;
+    height: 0.7em;
 }
 
 .vertical_medium {
-    height: 1rem;
+    height: 1.4em;
 }
 
 .vertical_large {
-    height: 2rem;
+    height: 2.8em;
 }
